--- a/themes/rcforward/sass/_charity.scss
+++ b/themes/rcforward/sass/_charity.scss
@@ -63,8 +63,8 @@
             object-fit: cover;
             width: 100%;
             height: 35vh;
-            @include tablet {
-              height: 70vh;
+            @include desktop {
+              height: 100vh;
             }
           }
         }
