Add 404 css and updated contact page

--- a/themes/rcforward/sass/style.scss
+++ b/themes/rcforward/sass/style.scss
@@ -69,6 +69,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "footer";
 @import "front-page";
 @import "contact-page";
+@import "404";
 
 
 
