--- a/themes/rcforward/sass/_contact-page.scss
+++ b/themes/rcforward/sass/_contact-page.scss
@@ -13,12 +13,11 @@
     .post-25 {
       display: flex;
       flex-direction: column;
-      padding: 13px;
+      padding: 24px;
       .entry-header {
         margin-top:10px;
         display: flex;
         justify-content: center;
-
         h2 {
           color: $credible__blue;
           margin: 0;
@@ -28,18 +27,8 @@
           }
         }
       }
-      .entry-content {
-        p {
-          font-style: normal;
-          
-          @include tablet {
-            color: $credible__blue;
-            font-size: 20px;
-            // text-align: center;
-          }
-        }
-        h4 {
-                   font-weight: normal;
+     h4 {             
+          font-weight: normal;
           height: 62px;
           border-radius: 5px;
           margin: 0;
@@ -47,14 +36,38 @@
           text-align: center;
           font-size: 14px;
           @include tablet {
- 
             margin-bottom: 4em;
             margin-top: 0;
             color: $credible__blue;
           }
           @include desktop {
             font-size: 25px;
-  
+          }
+        }
+        .contact-text{
+          p{
+            font-weight:400;
+            font-style: normal;
+             color: $credible__blue;
+                 line-height: 16px;
+          @include tablet {
+            text-align: center;
+            font-size: 20px;
+          }
+        }
+        }
+      .entry-content {
+        p {
+          font-style: normal;
+          @include tablet {
+            font-size: 20px;
+          }
+          strong{
+            font-weight: 600;
+            @include tablet{
+              text-align: center; 
+
+            }
           }
         }
         .wp-block-column {
@@ -126,3 +139,7 @@
     }
   }
 }
+
+
+
+  
