--- a/themes/rcforward/style.css
+++ b/themes/rcforward/style.css
@@ -497,6 +497,10 @@ body {
   border-radius: 8px;
   margin-top: 10px; }
 
+/* 404 page */
+.error-404 .site-content {
+  width: 100%; }
+
 /*--------------------------------------------------------------
 # Page Templates
 --------------------------------------------------------------*/
@@ -1510,7 +1514,7 @@ ol.flickity-page-dots {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  padding: 13px; }
+  padding: 24px; }
   .page-template-page-contact .site-content .post-25 .entry-header {
     margin-top: 10px;
     display: -webkit-box;
@@ -1526,13 +1530,7 @@ ol.flickity-page-dots {
         .page-template-page-contact .site-content .post-25 .entry-header h2 {
           margin: auto;
           font-size: 55px; } }
-  .page-template-page-contact .site-content .post-25 .entry-content p {
-    font-style: normal; }
-    @media (min-width: 650px) {
-      .page-template-page-contact .site-content .post-25 .entry-content p {
-        color: #14225F;
-        font-size: 20px; } }
-  .page-template-page-contact .site-content .post-25 .entry-content h4 {
+  .page-template-page-contact .site-content .post-25 h4 {
     font-weight: normal;
     height: 62px;
     border-radius: 5px;
@@ -1541,13 +1539,32 @@ ol.flickity-page-dots {
     text-align: center;
     font-size: 14px; }
     @media (min-width: 650px) {
-      .page-template-page-contact .site-content .post-25 .entry-content h4 {
+      .page-template-page-contact .site-content .post-25 h4 {
         margin-bottom: 4em;
         margin-top: 0;
         color: #14225F; } }
     @media (min-width: 1000px) {
-      .page-template-page-contact .site-content .post-25 .entry-content h4 {
+      .page-template-page-contact .site-content .post-25 h4 {
         font-size: 25px; } }
+  .page-template-page-contact .site-content .post-25 .contact-text p {
+    font-weight: 400;
+    font-style: normal;
+    color: #14225F;
+    line-height: 16px; }
+    @media (min-width: 650px) {
+      .page-template-page-contact .site-content .post-25 .contact-text p {
+        text-align: center;
+        font-size: 20px; } }
+  .page-template-page-contact .site-content .post-25 .entry-content p {
+    font-style: normal; }
+    @media (min-width: 650px) {
+      .page-template-page-contact .site-content .post-25 .entry-content p {
+        font-size: 20px; } }
+    .page-template-page-contact .site-content .post-25 .entry-content p strong {
+      font-weight: 600; }
+      @media (min-width: 650px) {
+        .page-template-page-contact .site-content .post-25 .entry-content p strong {
+          text-align: center; } }
   .page-template-page-contact .site-content .post-25 .entry-content .wp-block-column {
     margin-bottom: 69px;
     margin-top: 14px;
@@ -1596,3 +1613,23 @@ ol.flickity-page-dots {
   @media (min-width: 650px) {
     .wpcf7-form p:last-of-type {
       text-align: left; } }
+
+/*--------------------------------------------------------------
+# 404 Page
+--------------------------------------------------------------*/
+.error404 .site-content {
+  padding: 0;
+  max-width: 100%;
+  height: 100vh; }
+  .error404 .site-content section {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
+    .error404 .site-content section .page-content {
+      width: 50%; }
+      .error404 .site-content section .page-content h1 {
+        font-size: 30px; }
+      .error404 .site-content section .page-content p {
+        font-size: 5rem; }
+    .error404 .site-content section .image-404 {
+      width: 50%; }
