--- a/themes/rcforward/sass/_contact-page.scss
+++ b/themes/rcforward/sass/_contact-page.scss
@@ -15,7 +15,7 @@
       flex-direction: column;
       padding: 24px;
       .entry-header {
-        margin-top:10px;
+        margin-top: 10px;
         display: flex;
         justify-content: center;
         h2 {
@@ -27,46 +27,45 @@
           }
         }
       }
-     h4 {             
-          font-weight: normal;
-          height: 62px;
-          border-radius: 5px;
-          margin: 0;
-          padding: 10px;
-          text-align: center;
-          font-size: 14px;
-          @include tablet {
-            margin-bottom: 4em;
-            margin-top: 0;
-            color: $credible__blue;
-          }
-          @include desktop {
-            font-size: 25px;
-          }
+      h4 {
+        font-weight: normal;
+        height: 62px;
+        border-radius: 5px;
+        margin: 0;
+        padding: 10px;
+        text-align: center;
+        font-size: 14px;
+        @include tablet {
+          margin-bottom: 4em;
+          margin-top: 0;
+          color: $credible__blue;
         }
-        .contact-text{
-          p{
-            font-weight:400;
-            font-style: normal;
-             color: $credible__blue;
-                 line-height: 16px;
+        @include desktop {
+          font-size: 25px;
+        }
+      }
+      .contact-text {
+        p {
+          font-weight: 400;
+          font-style: normal;
+          color: $credible__blue;
+          line-height: 16px;
           @include tablet {
             text-align: center;
             font-size: 20px;
           }
         }
-        }
+      }
       .entry-content {
         p {
           font-style: normal;
           @include tablet {
             font-size: 20px;
           }
-          strong{
+          strong {
             font-weight: 600;
-            @include tablet{
-              text-align: center; 
-
+            @include tablet {
+              text-align: center;
             }
           }
         }
@@ -80,10 +79,10 @@
             @include tablet {
               text-align: justify;
             }
-            p:last-child{
-                @include tablet {
-              text-align: justify;
-            }
+            p:last-child {
+              @include tablet {
+                text-align: justify;
+              }
             }
           }
           figure {
@@ -120,9 +119,16 @@
               input[type='submit'] {
                 background: $credible__blue;
                 color: $white;
-                width: 144px;
+                width: 150px;
                 border-radius: 5px;
                 height: 62px;
+                @include tablet{
+                         background: $white;
+                         color: $credible__blue;
+                    border: 2px solid $credible__blue;
+                         color: $credible__blue;
+                        
+                }
               }
             }
           }
@@ -131,15 +137,11 @@
     }
   }
 }
-.wpcf7-form{
-  p:last-of-type{
+.wpcf7-form {
+  p:last-of-type {
     text-align: center;
-    @include tablet{
-      text-align: left;
+    @include tablet {
+      text-align: right;
     }
   }
 }
-
-
-
-  
