--- a/themes/rcforward/style.css
+++ b/themes/rcforward/style.css
@@ -483,8 +483,7 @@ body {
   font-weight: 700;
   padding: 1.6rem 5.3rem;
   color: #192726;
-  border-radius: 8px;
-  margin-top: 10px; }
+  border-radius: 8px; }
 
 /*--------------------------------------------------------------
 # Page Templates
@@ -559,7 +558,8 @@ body {
         flex-direction: row; }
         .page-template-page-how-it-works .site-content .entry-header .how-it-works-steps .text-steps .work-step .work-step-icon {
           display: none; }
-        .page-template-page-how-it-works .site-content .entry-header .how-it-works-steps .text-steps .work-step .step-text .work-step-title, .page-template-page-how-it-works .site-content .entry-header .how-it-works-steps .text-steps .work-step .step-text .work-step-description {
+        .page-template-page-how-it-works .site-content .entry-header .how-it-works-steps .text-steps .work-step .step-text .work-step-title,
+        .page-template-page-how-it-works .site-content .entry-header .how-it-works-steps .text-steps .work-step .step-text .work-step-description {
           margin: 1rem; }
         .page-template-page-how-it-works .site-content .entry-header .how-it-works-steps .text-steps .work-step .work-step-title,
         .page-template-page-how-it-works .site-content .entry-header .how-it-works-steps .text-steps .work-step .work-step-description {
@@ -572,24 +572,41 @@ body {
         .page-template-page-how-it-works .site-content .entry-header .how-it-works-steps .text-steps .work-step::last-child .mobile-step {
           position: relative;
           top: 0; }
-
-.page-template-page-how-it-works .site-content .entry-contact-us {
-  font-size: 1.3rem;
-  text-align: center;
-  background-color: rgba(216, 216, 216, 0.18); }
-  .page-template-page-how-it-works .site-content .entry-contact-us .mobile-text {
-    font-weight: bolder;
-    margin: 3rem 0; }
-  .page-template-page-how-it-works .site-content .entry-contact-us .desktop-text {
-    display: none; }
-  .page-template-page-how-it-works .site-content .entry-contact-us .contact-us-button {
-    border: 2px solid #42299A;
-    font-size: 1.5rem;
-    font-weight: 700;
-    padding: 1.6rem 4rem;
-    margin: 3rem 0;
-    color: #42299A;
-    border-radius: 8px; }
+  .page-template-page-how-it-works .site-content .entry-header .entry-donate-page {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-direction: column;
+        flex-direction: column; }
+    .page-template-page-how-it-works .site-content .entry-header .entry-donate-page .get-started {
+      font-size: 1.4rem;
+      font-weight: bolder; }
+  .page-template-page-how-it-works .site-content .entry-header .entry-contact-us {
+    font-size: 1.3rem;
+    text-align: center; }
+    .page-template-page-how-it-works .site-content .entry-header .entry-contact-us .mobile-text {
+      font-weight: bolder;
+      margin: 3rem 0; }
+    .page-template-page-how-it-works .site-content .entry-header .entry-contact-us .desktop-text {
+      display: none; }
+    .page-template-page-how-it-works .site-content .entry-header .entry-contact-us .contact-us-button {
+      border: 2px solid #42299A;
+      font-size: 1.5rem;
+      font-weight: 700;
+      padding: 1.6rem 4rem;
+      margin: 3rem 0;
+      color: #42299A;
+      border-radius: 8px; }
 
 .page-template-page-how-it-works .site-content .entry-main {
   margin: 4rem 2rem 0;
@@ -620,11 +637,14 @@ body {
     -webkit-box-ordinal-group: 3;
         -ms-flex-order: 2;
             order: 2; }
-  .page-template-page-how-it-works .site-content .entry-main .wp-block-columns:nth-child(2n), .page-template-page-how-it-works .site-content .entry-main .wp-block-columns:last-child {
+  .page-template-page-how-it-works .site-content .entry-main .wp-block-columns:nth-child(2n),
+  .page-template-page-how-it-works .site-content .entry-main .wp-block-columns:last-child {
     margin: 0 auto; }
-    .page-template-page-how-it-works .site-content .entry-main .wp-block-columns:nth-child(2n) .wp-block-column:first-child p:first-child, .page-template-page-how-it-works .site-content .entry-main .wp-block-columns:last-child .wp-block-column:first-child p:first-child {
+    .page-template-page-how-it-works .site-content .entry-main .wp-block-columns:nth-child(2n) .wp-block-column:first-child p:first-child,
+    .page-template-page-how-it-works .site-content .entry-main .wp-block-columns:last-child .wp-block-column:first-child p:first-child {
       width: 80%; }
-      .page-template-page-how-it-works .site-content .entry-main .wp-block-columns:nth-child(2n) .wp-block-column:first-child p:first-child strong, .page-template-page-how-it-works .site-content .entry-main .wp-block-columns:last-child .wp-block-column:first-child p:first-child strong {
+      .page-template-page-how-it-works .site-content .entry-main .wp-block-columns:nth-child(2n) .wp-block-column:first-child p:first-child strong,
+      .page-template-page-how-it-works .site-content .entry-main .wp-block-columns:last-child .wp-block-column:first-child p:first-child strong {
         font-size: 1.4rem; }
   .page-template-page-how-it-works .site-content .entry-main .wp-block-columns .wp-block-column {
     margin-bottom: 0; }
@@ -637,11 +657,30 @@ body {
     -webkit-box-ordinal-group: 2;
         -ms-flex-order: 1;
             order: 1; }
+    @media (min-width: 650px) {
+      .page-template-page-how-it-works .site-content .entry-main .wp-block-columns:last-child .wp-block-column:first-child p {
+        margin-left: 1.7rem; } }
   .page-template-page-how-it-works .site-content .entry-main .wp-block-columns:last-child .wp-block-column:last-child {
     text-align: center; }
+    @media (min-width: 650px) {
+      .page-template-page-how-it-works .site-content .entry-main .wp-block-columns:last-child .wp-block-column:last-child {
+        margin-left: 0; } }
   .page-template-page-how-it-works .site-content .entry-main .wp-block-columns:first-child .wp-block-column:last-child,
   .page-template-page-how-it-works .site-content .entry-main .wp-block-columns:nth-child(2n) .wp-block-column:last-child {
     display: none; }
+    @media (min-width: 650px) {
+      .page-template-page-how-it-works .site-content .entry-main .wp-block-columns:first-child .wp-block-column:last-child,
+      .page-template-page-how-it-works .site-content .entry-main .wp-block-columns:nth-child(2n) .wp-block-column:last-child {
+        display: unset; } }
+
+.page-template-page-how-it-works .site-content .why-donate {
+  background-color: #F9F5ED; }
+  .page-template-page-how-it-works .site-content .why-donate h3 {
+    font-size: 1.4rem;
+    margin-bottom: 0;
+    padding-top: 3rem; }
+  .page-template-page-how-it-works .site-content .why-donate .why-donate-content .single-reason p {
+    font-weight: bolder; }
 
 /* Single Fund Pages */
 .single-fund .hfeed .site-content .type-fund {
